# sshfwd.rs

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml
.cargo/: config.toml
.claude/rules/: agent-platform.md  port-forwarding.md  publishing.md  ssh-connection.md  tui-architecture.md  workspace-dependencies.md
.github/workflows/: ci.yml  release.yml
assets/: record.vhs
crates/sshfwd/: Cargo.toml  build.rs
crates/sshfwd-agent/: Cargo.toml
crates/sshfwd-agent/src/: main.rs
crates/sshfwd-agent/src/scanner/: linux.rs  macos.rs  mod.rs  proc_net_tcp.rs
crates/sshfwd-common/: Cargo.toml
crates/sshfwd-common/src/: types.rs
crates/sshfwd-common/src/scanner/: linux.rs  macos.rs  mod.rs  proc_net_tcp.rs
crates/sshfwd/prebuilt-agents/: .gitignore
crates/sshfwd/prebuilt-agents/linux-x86_64/: sshfwd-agent
crates/sshfwd/src/: app.rs  embedded.rs  error.rs  event.rs  main.rs  notify.rs
crates/sshfwd/src/discovery/: local.rs  mod.rs
crates/sshfwd/src/forward/: mod.rs  persistence.rs
crates/sshfwd/src/ssh/: agent.rs  config.rs  mod.rs  session.rs
crates/sshfwd/src/ui/: header.rs  hotkey_bar.rs  mod.rs  modal.rs  table.rs
prebuilt-agents/: .gitignore
scripts/: build-agents.sh
