[workspace]
members = [
    "crates/sshfwd",
    "crates/sshfwd-agent",
    "crates/sshfwd-common",
]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = "1"
serde_json = "1"

# System
libc = "0.2"

# SSH and async
openssh = "0.10"
tokio = "1"

# Cryptography
sha2 = "0.10"

# Error handling
thiserror = "2"

# Workspace crates
sshfwd-common = { path = "crates/sshfwd-common" }

# Optimized release profile for the agent binary (small, statically linked)
[profile.release-agent]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
