[workspace]
members = [
    "crates/sshfwd",
    "crates/sshfwd-agent",
    "crates/sshfwd-common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gogoout/sshfwd.rs"
authors = ["gogoout"]

[workspace.dependencies]
# Serialization
serde = "1"
serde_json = "1"

# System
libc = "0.2"

# SSH and async
russh = "0.57"
ssh2-config = "0.6"
tokio = "1"
futures = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"
crossbeam-channel = "0.5"

# Cryptography
sha2 = "0.10"

# Error handling
thiserror = "2"

# Workspace crates
sshfwd-common = { version = "0.1.0", path = "crates/sshfwd-common" }

# Optimized release profile for the agent binary (small, statically linked)
[profile.release-agent]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
