[package]
name = "sshfwd-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Remote agent binary for sshfwd (embedded in main app, not published)"
publish = false

[dependencies]
sshfwd-common = { version = "0.1.0", path = "../sshfwd-common" }
serde_json = { workspace = true }
libc = { workspace = true }
