[package]
name = "sshfwd-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal types for sshfwd - not intended for direct use"
keywords = ["ssh", "internal"]
categories = ["command-line-utilities"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
