[package]
name = "sshfwd"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sshfwd-common = { workspace = true }
serde_json = { workspace = true }
russh = { workspace = true }
ssh2-config = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
ratatui = { workspace = true, features = ["crossterm"] }
crossterm = { workspace = true, features = ["use-dev-tty"] }
crossbeam-channel = { workspace = true }
