[package]
name = "sshfwd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "TUI-based SSH port forwarding manager with automatic port discovery"
keywords = ["ssh", "port-forwarding", "tui", "terminal"]
categories = ["command-line-utilities", "network-programming"]
readme = "../../README.md"
homepage = "https://github.com/gogoout/sshfwd.rs"
documentation = "https://github.com/gogoout/sshfwd.rs#readme"
build = "build.rs"
include = [
    "src/**/*",
    "build.rs",
    "prebuilt-agents/**/*",
    "../../README.md",
]

[dependencies]
sshfwd-common = { workspace = true }
serde_json = { workspace = true }
russh = { workspace = true }
ssh2-config = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
ratatui = { workspace = true, features = ["crossterm"] }
crossterm = { workspace = true, features = ["use-dev-tty"] }
crossbeam-channel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
